# rust-embedded-sketches

./: README.md
embedded-ui/: Cargo.toml  rustfmt.toml
embedded-ui/examples/: sandbox.rs
embedded-ui/src/: align.rs  block.rs  color.rs  el.rs  event.rs  focus.rs  font.rs  helpers.rs  layout.rs  lib.rs  linear.rs  padding.rs  render.rs  size.rs  state.rs  style.rs  text.rs  ui.rs  widget.rs
embedded-ui/src/kit/: button.rs  checkbox.rs  divider.rs  icon.rs  mod.rs  select.rs
embedded-ui/src/style/: oled.rs
esp32-sandbox/: Cargo.toml  diagram.json  wokwi.toml
esp32-sandbox/.devcontainer/: devcontainer.json
esp32-sandbox/docs/: README.md
esp32-sandbox/scripts/: flash.sh
esp32-sandbox/src/: lib.rs  main.rs
esp32-sandbox/src/audio/effects/: effect.rs
esp32-sandbox/src/audio/mix/: mixer.rs
esp32-sandbox/src/audio/osc/: simple_form.rs
esp32-sandbox/src/audio/source/: conversion.rs  mod.rs
esp32-sandbox/src/dsp/: delay_line.rs  dft.rs  interpolator.rs  math.rs  resampler.rs
esp32-sandbox/src/dsp/filter/: fir_lpf.rs
esp32-sandbox/src/dsp/waves/: shapes.rs
paw/: Cargo.toml  README.md
paw-one/: Cargo.toml  Embed.toml
paw-one/.cargo/: config.toml
paw-one/notebooks/: i2s.csv  plot.ipynb
paw-one/sketches/: abc.rs  dac_attempt.rs  display_draft.rs  display_fps.rs  i2s_attempt.rs  sai_attempt.rs
paw-one/src/: heap.rs  lib.rs  main.rs
paw-one/src/app/: playlist.rs  project.rs
paw-one/src/audio/: mod.rs  sai.rs
paw-one/src/display/: fps.rs  mod.rs
paw-one/src/flash/: mod.rs  w25q.rs
paw-one/src/sd/: mod.rs
paw-one/src/ui/audio/: mod.rs
paw-one/src/wav/: format.rs  mod.rs
paw/notebooks/: dft.ipynb  simple_form.ipynb
paw/src/: lib.rs
paw/src/audio/: mod.rs
paw/src/audio/osc/: simple_form.rs
paw/src/audio/source/: buffered.rs  mix.rs  mod.rs  restarting.rs  zero.rs
paw/src/audio/wavetable/: mod.rs  osc.rs  wavetable.rs
paw/src/dsp/: README.md  delay_line.rs  dft.rs  interpolator.rs  math.rs  mod.rs  resampler.rs  sample.rs
paw/src/dsp/filter/: filter.rs  fir_lpf.rs
paw/src/ui/audio/: mod.rs  wave_window.rs
sandbox/: Cargo.toml  build.rs  rustfmt.toml
sandbox/.cargo/: config.toml
sandbox/notebooks/: dft.ipynb  i2s_out_test.ipynb  osc.ipynb  pink_noise.ipynb  saw.ipynb  simple_form.ipynb  square.ipynb  wave_add.ipynb
sandbox/src/: heap.rs  lib.rs  main.rs
sandbox/src/audio/: mod.rs
sandbox/src/audio/effects/: freeverb.rs  mod.rs
sandbox/src/audio/mix/: mixer.rs
sandbox/src/audio/osc/: mod.rs  saw.rs  simple_form.rs  sine.rs  square.rs
sandbox/src/audio/output/: pwm.rs
sandbox/src/audio/source/: mix.rs  mod.rs  unify.rs  zero.rs
sandbox/src/display/: fps.rs
sandbox/src/dsp/: README.md  delay_line.rs  interpolator.rs  math.rs  mod.rs  resampler.rs
sandbox/src/dsp/filter/: all_pass.rs  comb.rs  filter.rs  fir_lpf.rs  mod.rs
sandbox/src/dsp/waves/: shapes.rs
sandbox/src/fmt/: mod.rs
sandbox/src/i2s/: pio.rs
sandbox/src/rp2040_ext/: i2s.pio  mod.rs  pio_i2s.rs
sandbox/xtask/src/: main.rs
stm32g431-sandbox/: Cargo.toml
test/: .gitignore  Cargo.toml  openocd-picoprobe.cfg  openocd.cfg  package.json
test/.cargo/: config.toml
test/examples/: probe-rtt.rs  rp2040-blink.rs
test/src/: main.rs
