[package]
name = "embedded-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-text = "0.7.1"

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"
