[package]
edition = "2021"
name = "sandbox"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["hazer-hazer"]

[workspace]
exclude = ["xtask"]
# members = ["testsuite"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
# embedded-hal = "1.0.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

cortex-m-semihosting = "0.5.0"
defmt = "0.3"
defmt-rtt = "0.4"
defmt-serial = "0.8.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0"

# HAL
# rp2040-hal = { version = "0.10.0", features = ["rt", "critical-section-impl"] }
pio = "0.2"
pio-proc = "0.2"

# BSP
rp-pico = "0.8"
waveshare-rp2040-zero = { version = "0.7.0" }

embedded-graphics = { version = "0.8.1", optional = true }
embedded-graphics-framebuf = "0.5.0"
embedded-text = "0.7.0"
embedded-alloc = { version = "0.5.1", features = [] }

#
st7735-lcd = "0.9.0"
embedded-time = "0.12.1"
heapless = "0.8.0"
static_cell = "2.0.0"
portable-atomic = { version = "1.6.0", features = [
    "unsafe-assume-single-core",
] }
micromath = "2.1.0"
num = { version = "0.4.1", features = [], default-features = false }
panic-semihosting = "0.6.0"
mipidsi = "0.7.1"
display-interface-spi = "0.4.1"
num-traits = { version = "0.2.18", default-features = false, features = [
    "libm",
] }

[dev-dependencies]
defmt-test = "0.3"

[lib]
harness = false


# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.7"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-boot2 = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
# opt-level = 3
# opt-level = 'z'
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
