[package]
name = "stm32g431-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "time-driver-any",
    "stm32g431cb",
    "memory-x",
    "unstable-pac",
    "exti",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.6" }
embedded-can = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }

embassy-sync = "0.5.0"
embassy-executor = "0.5.0"
embassy-time = "0.3.0"
embassy-usb = "0.1.0"
embassy-futures = "0.1.1"

nb = "1.0.0"

heapless = { version = "0.8", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
