[package]
authors = ["hazer-hazer <gordeev.john@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "test"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = { version = "0.2", features = ["unproven"] }
panic-halt = "0.2.0"
rp2040-hal = { version = "0.9.2", features = ["critical-section-impl"] }
rtt-target = "0.5.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.8"
panic-semihosting = { version = "0.6.0", features = ["exit"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
# opt-level = 3
opt-level = 's'
overflow-checks = true
